--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             0%, 100% { opacity: 0.5; }
             50% { opacity: 1; }
         }
+        .button { background-color: #1c87c9; border: none; color: white; padding: 20px 34px; text-align: center; text-decoration: none; display: inline-block; font-size: 20px; margin: 4px 2px; cursor: pointer; }
     </style>
 </head>
 <body>
@@ -76,6 +77,7 @@
           ❤️          
         </div>
         <div class="message">❤️ I miss u ❤️</div>
+        <a href="/home.html" class="button">Click Here</a>
     </div>
 
 </body>
