--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
          ❤️❤️❤️         
           ❤️          
         </div>
-        <div class="message">❤️ I miss u ❤️</div>
-        <a href="/home.html" class="button">Click Here</a>
+        <div class="message">❤️ I miss u ❤️
+            <a href="/home.html" class="button">Click Here</a>
     </div>
+</div>
+        
 
 </body>
 </html>
